libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_branch_commit_files_subview.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
assertion_line: 697
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│   ? README.md                  │  diff --git a/README.md b/README.md                             │
│    src/                       │  @@ -1 +1 @@                                                    │
│     M lib.rs                   │  -old README.md                                                 │
│     M main.rs                  │  +new README.md                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
╭ 2   Branch Commit Files ──────╮                                                                 │
│   M README.md                  │                                                                 │
│    src/                       │                                                                 │
│     A lib.rs                   │                                                                 │
│     R new_name.rs              │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 3   Commits                   │─────────────────────────────────────────────────────────────────╯
│●  abc1234  RT  init project    │ 6  󰌱 Log                                                        │
│●  def5678  RT  wire commands   │  notice=Ready                                                   │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 enter  expand   Esc  back   p  pull   P  push
