libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_branch_commits_subview.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
assertion_line: 672
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│   ? README.md                  │  commit abc1234                                                 │
│    src/                       │  Author: ratagit-tests <ratagit-tests@example.com>              │
│     M lib.rs                   │                                                                 │
│     M main.rs                  │      selected commit                                            │
│                                │                                                                 │
│                                │  diff --git a/commit.txt b/commit.txt                           │
│                                │  @@ -1 +1 @@                                                    │
│                                │  -old abc1234                                                   │
│                                │  +new abc1234                                                   │
╰────────────────────────────────╯                                                                 │
╭ 2   Branch Commits ───────────╮                                                                 │
│●  abc1234  RT  init project    │                                                                 │
│●  def5678  RT  wire commands   │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 3   Commits                   │─────────────────────────────────────────────────────────────────╯
│●  abc1234  RT  init project    │ 6  󰌱 Log                                                        │
│●  def5678  RT  wire commands   │  notice=Ready                                                   │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 enter  files   Esc  back   p  pull   P  push
