libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_branches_auto_stash_confirm_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│    README.md                  │  * commit abc1234                                               │
│    src/                       │  Author: ratagit-tests <ratagit-tests@example.com>              │
│      lib.rs                   │                                                                 │
│      main.rs                  │      init project on feature/mvp                                │
│                   ╭ ⚠ Confirm ───────────────────────────────────────────────╮                   │
│                   │                                                          │                   │
│                   │          Auto stash before checkout feature/mvp?         │                   │
│                   │      The stash will be restored after the operation.     │                   │
│                   │                                                          │                   │
╰───────────────────│              Operation: checkout feature/mvp             │                   │
╭ 2   Branches ────│                                                          │                   │
│ main             │ ──────────────────────────────────────────────────────── │                   │
│  feature/mvp      │ Enter auto stash  Esc cancel                             │                   │
│                   ╰──────────────────────────────────────────────────────────╯                   │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 3   Commits                   │─────────────────────────────────────────────────────────────────╯
│●  abc1234  RT  init project    │ 6  󰌱 Log                                                        │
│●  def5678  RT  wire commands   │  notice=Ready                                                   │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 Enter  confirm   Esc  cancel
