libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_branches_both_delete_confirm_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│   ? README.md                  │  * commit abc1234                                               │
│    src/                       │  Author: ratagit-tests <ratagit-tests@example.com>              │
│     M lib.rs                   │                                                                 │
│     M main.rs                  │      init project on feature/mvp                                │
│                                │                                                                 │
│                   ╭ ‼ Confirm ───────────────────────────────────────────────╮                   │
│                   │                                                          │                   │
│                   │                                                          │                   │
│                   │                                                          │                   │
╰───────────────────│                                                          │                   │
╭ 2   Branches ────│        Delete local and remote branch feature/mvp?       │                   │
│ main             │  Remote branch deletion may affect other collaborators.  │                   │
│  feature/mvp      │                                                          │                   │
│                   │      Deletes local branch, then origin/feature/mvp.      │                   │
│                   │                                                          │                   │
│                   │                                                          │                   │
│                   │                                                          │                   │
╰───────────────────│                                                          │                   │
│ 3   Commits      │                                                          │───────────────────╯
│●  abc1234  RT  ini│ ──────────────────────────────────────────────────────── │                   │
│●  def5678  RT  wir│ Enter delete both  Esc cancel                            │                   │
│                   ╰──────────────────────────────────────────────────────────╯                   │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 Enter  confirm   Esc  cancel
