libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_branches_create_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
assertion_line: 334
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
┌ [1] 󰈙 Files ───────────────────┐┌ [5]  Details ─────────────────────────────────────────────────┐
│    README.md                  ││  * commit abc1234                                              │
│    src/                       ││  Author: ratagit-tests <ratagit-tests@example.com>             │
│      lib.rs                   ││                                                                │
│      main.rs                  ││      init project on feature/mvp                               │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│             ┌ Create Branch ───────────────────────────────────────────────────────┐             │
└─────────────│ Create branch from selected branch                                   │             │
┌ [2]  Branch│ Start point: feature/mvp                                             │             │
│ main       │ ┌ Branch name ─────────────────────────────────────────────────────┐ │             │
│  feature/mvp│ │feature/new                                                       │ │             │
│             │ └──────────────────────────────────────────────────────────────────┘ │             │
│             │                                                                      │             │
│             │                                                                      │             │
│             │ Enter create  |  Esc cancel                                          │             │
└─────────────└──────────────────────────────────────────────────────────────────────┘             │
┌ [3]  Commits ─────────────────┐└────────────────────────────────────────────────────────────────┘
│ abc1234 init project          │┌ [6] 󰌱 Log ─────────────────────────────────────────────────────┐
│ def5678 wire commands         ││  notice=Ready                                                  │
│  draft=                        ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
└────────────────────────────────┘│                                                                │
┌ [4]  Stash ───────────────────┐│                                                                │
│ stash@{0} WIP on main: local t││                                                                │
└────────────────────────────────┘└────────────────────────────────────────────────────────────────┘
branch name: arrows/Home/End cursor | Enter create | Esc cancel
