libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_branches_delete_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│   ? README.md                  │  * commit abc1234                                               │
│    src/                       │  Author: ratagit-tests <ratagit-tests@example.com>              │
│     M lib.rs                   │                                                                 │
│     M main.rs                  │      init project on feature/mvp                                │
│                                │                                                                 │
│                   ╭ ‼ Delete Branch ─────────────────────────────────────────╮                   │
│                   │ Target: feature/mvp                                      │                   │
│                   │ ╭ Choice ──────────────────────────────────────────────╮ │                   │
│                   │ │▌ delete local                                        │ │                   │
╰───────────────────│ │  delete remote                                       │ │                   │
╭ 2   Branches ────│ │  delete local and remote                             │ │                   │
│ main             │ ╰──────────────────────────────────────────────────────╯ │                   │
│  feature/mvp      │ Description                                              │                   │
│                   │ Delete the selected local branch with `git branch -d`.   │                   │
│                   │                                                          │                   │
│                   │                                                          │                   │
│                   │                                                          │                   │
╰───────────────────│                                                          │                   │
│ 3   Commits      │                                                          │───────────────────╯
│●  abc1234  RT  ini│ ──────────────────────────────────────────────────────── │                   │
│●  def5678  RT  wir│ j/k select  Enter delete  Esc cancel                     │                   │
│                   ╰──────────────────────────────────────────────────────────╯                   │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 j/k  select   Enter  delete   Esc  cancel
