libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_branches_force_delete_confirm_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│    README.md                  │  ### unstaged                                                   │
│    src/                       │  diff --git a/README.md b/README.md                             │
│      lib.rs                   │  @@ -1 +1 @@                                                    │
│      main.rs                  │  -old README.md                                                 │
│                                │  +new README.md                                                 │
│                                │                                                                 │
│                                │                                                                 │
│           ┌ Force Delete Branch ─────────────────────────────────────────────────────┐           │
│           │ Branch is not fully merged.                                              │           │
╰───────────│ Target: feature/mvp                                                      │           │
│ 2   Branc│ Git refused safe deletion:                                               │           │
│ main     │ error: The branch 'feature/mvp' is not fully merged.                     │           │
│  feature/m│                                                                          │           │
│           │                                                                          │           │
│           │                                                                          │           │
│           │                                                                          │           │
│           │ Force delete removes the branch name even if commits are only reachable  │           │
╰───────────│ Enter force delete  |  Esc cancel                                        │           │
│ 3   Commi└──────────────────────────────────────────────────────────────────────────┘───────────╯
│●  abc1234  RT  init project    │ 6  󰌱 Log                                                        │
│●  def5678  RT  wire commands   │  error=Branch is not fully merged; confirmation required: error:│
│                                │  notice=Ready                                                   │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 Enter  force delete   Esc  cancel
