libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_branches_rebase_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│    README.md                  │  * commit abc1234                                               │
│    src/                       │  Author: ratagit-tests <ratagit-tests@example.com>              │
│      lib.rs                   │                                                                 │
│      main.rs                  │      init project on feature/mvp                                │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│            ┌ Rebase ────────────────────────────────────────────────────────────────┐            │
│            │ Selected target: feature/mvp                                           │            │
╰────────────│ ┌ Choice ────────────────────────────────────────────────────────────┐ │            │
╭ 2   Branch│ │  simple rebase                                                     │ │            │
│ main      │ │  interactive rebase                                                │ │            │
│  feature/mv│ └────────────────────────────────────────────────────────────────────┘ │            │
│            │ Description                                                            │            │
│            │ Run interactive rebase of the current branch onto `feature/mvp`.       │            │
│            │                                                                        │            │
│            │                                                                        │            │
╰────────────│ j/k select  |  Enter rebase  |  Esc cancel                             │            │
│ 3   Commit└────────────────────────────────────────────────────────────────────────┘────────────╯
│●  abc1234  RT  init project    │ 6  󰌱 Log                                                        │
│●  def5678  RT  wire commands   │  notice=Ready                                                   │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 j/k  select   Enter  rebase   Esc  cancel
