libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_branches_remote_delete_confirm_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
assertion_line: 802
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│    README.md                  │  * commit abc1234                                               │
│    src/                       │  Author: ratagit-tests <ratagit-tests@example.com>              │
│      lib.rs                   │                                                                 │
│      main.rs                  │      init project on feature/mvp                                │
│                   ╭ ‼ Confirm ───────────────────────────────────────────────╮                   │
│                   │                                                          │                   │
│                   │                                                          │                   │
│                   │         Delete remote branch origin/feature/mvp?         │                   │
│                   │  Remote branch deletion may affect other collaborators.  │                   │
╰───────────────────│                                                          │                   │
╭ 2   Branches ────│       Runs `git push origin --delete feature/mvp`.       │                   │
│ main             │                                                          │                   │
│  feature/mvp      │                                                          │                   │
│                   │ ──────────────────────────────────────────────────────── │                   │
│                   │ Enter delete remote  Esc cancel                          │                   │
│                   ╰──────────────────────────────────────────────────────────╯                   │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 3   Commits                   │─────────────────────────────────────────────────────────────────╯
│●  abc1234  RT  init project    │ 6  󰌱 Log                                                        │
│●  def5678  RT  wire commands   │  notice=Ready                                                   │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 Enter  confirm   Esc  cancel
