libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_command_palette_modal.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
assertion_line: 510
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│   ? README.md                  │  ### unstaged                                                   │
│    src/                       │  diff --git a/README.md b/README.md                             │
│     M lib.rs                   │  @@ -1 +1 @@                                                    │
│     M main.rs                  │  -old README.md                                                 │
│                                │  +new README.md                                                 │
│                   ╭ ? Commands ──────────────────────────────────────────────╮                   │
│                   │ Local commands                                           │                   │
│                   │   space    stage/unstage                                 │                   │
│                   │   d        discard                                       │                   │
╰───────────────────│   A        amend                                         │                   │
│ 2   Branches     │   c        commit                                        │                   │
│ main             │   s        stash                                         │                   │
│  feature/mvp      │   D        reset                                         │                   │
│                   │   enter    expand                                        │                   │
│                   │   v        visual select                                 │                   │
│                   │ Global commands                                          │                   │
│                   │   p        pull                                          │                   │
╰───────────────────│   P        push                                          │                   │
│ 3   Commits      │   r        refresh                                       │───────────────────╯
│●  abc1234  RT  ini│ ──────────────────────────────────────────────────────── │                   │
│●  def5678  RT  wir│ j/k select  Enter run  Esc close                         │                   │
│                   ╰──────────────────────────────────────────────────────────╯                   │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 space  stage/unstage   d  discard   A  amend   c  commit   s  stash   D  reset   enter  expand   ?
