libs/ratagit-ui/tests/snapshots/snapshots__terminal_snapshot_commit_files_empty.snap
---
source: libs/ratagit-ui/tests/snapshots.rs
expression: "render_terminal_text(&state, TerminalSize { width: 100, height: 30, },)"
---
╭ 1  󰈙 Files ────────────────────╮ 5   Details ───────────────────────────────────────────────────╮
│    README.md                  │  details(commit files): no file selected                        │
│    src/                       │                                                                 │
│      lib.rs                   │                                                                 │
│      main.rs                  │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 2   Branches                  │                                                                 │
│ main                          │                                                                 │
│  feature/mvp                   │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
╭ 3   Commit Files ─────────────╮─────────────────────────────────────────────────────────────────╯
│                                │ 6  󰌱 Log                                                        │
│                                │  notice=Ready                                                   │
│                                │                                                                 │
│                                │                                                                 │
│                                │                                                                 │
╰────────────────────────────────╯                                                                 │
│ 4   Stash                     │                                                                 │
│ stash@{0} WIP on main: local t│                                                                 │
╰────────────────────────────────╯─────────────────────────────────────────────────────────────────╯
 Esc  back   p  pull   P  push
